kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truancy-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: truancy-web
  template:
    metadata:
      labels:
        app: truancy-web
    spec:
      containers:
        - name: web
          image: ghcr.io/debjani-99/truancy-cloud:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
