kube/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truancy-postgres-svc
  namespace: truancy-cloud
spec:
  selector:
    app: truancy-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
